feat(home): 添加设置页面和培养方案缓存功能
- 在首页添加设置图标按钮，可导航到设置页面
- 实现设置页面，包含培养方案缓存刷新间隔设置滑块
- 添加清除培养方案缓存功能和相应提示消息
- 优化培养方案数据获取，优先从缓存读取，支持自动更新
- 更新本地化文件，添加设置相关中文翻译
- 修复部分中文翻译文本
- 配置l10n.yaml指定输出目录

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -165,5 +165,17 @@
     }
   },
   "statusCompleted": "Completed",
-  "statusPending": "Pending"
+  "statusPending": "Pending",
+  "settingsTitle": "Settings",
+  "trainingPlanCacheTitle": "Training plan cache",
+  "trainingPlanCacheSubtitle": "Cache training plan data and update every few days.",
+  "cacheDaysLabel": "Refresh interval",
+  "cacheDaysValue": "Update every {days} days",
+  "@cacheDaysValue": {
+    "placeholders": {
+      "days": {}
+    }
+  },
+  "cacheClearButton": "Clear training plan cache",
+  "cacheClearedMessage": "Training plan cache cleared."
 }
