feat(app): 添加成绩通知功能
- 在Android端添加core library desugaring支持
- 添加POST_NOTIFICATIONS权限以支持通知功能
- 降级Kotlin版本并禁用增量编译以解决构建问题
- 实现成绩检查调度器和后台工作服务
- 添加本地通知权限请求和处理逻辑
- 在设置页面添加成绩通知开关和检查间隔配置
- 实现成绩缓存存储以检测新成绩
- 添加国际化支持多语言显示
- 优化后台任务的网络约束和重试策略

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -177,5 +177,25 @@
     }
   },
   "cacheClearButton": "Clear training plan cache",
-  "cacheClearedMessage": "Training plan cache cleared."
+  "cacheClearedMessage": "Training plan cache cleared.",
+  "gradeNotifySectionTitle": "Grade notifications",
+  "gradeNotifySectionSubtitle": "Check in background and notify when new grades appear.",
+  "gradeNotifyEnabledLabel": "Enable grade notifications",
+  "gradeNotifyIntervalLabel": "Check interval",
+  "gradeNotifyIntervalValue": "Every {hours} hours",
+  "@gradeNotifyIntervalValue": {
+    "placeholders": {
+      "hours": {}
+    }
+  },
+  "gradeNotifyTitle": "New grades available",
+  "gradeNotifyBody": "{count} new grade(s) detected",
+  "@gradeNotifyBody": {
+    "placeholders": {
+      "count": {}
+    }
+  },
+  "gradeNotifyChannelName": "Grade updates",
+  "gradeNotifyChannelDescription": "Notify when new grades are posted",
+  "notificationPermissionRequired": "Enable notification permission to receive grade reminders."
 }
