--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -177,5 +177,25 @@
     }
   },
   "cacheClearButton": "清除培养方案缓存",
-  "cacheClearedMessage": "培养方案缓存已清除。"
+  "cacheClearedMessage": "培养方案缓存已清除。",
+  "gradeNotifySectionTitle": "成绩提醒",
+  "gradeNotifySectionSubtitle": "后台定时检查新成绩并通知。",
+  "gradeNotifyEnabledLabel": "启用成绩提醒",
+  "gradeNotifyIntervalLabel": "检查间隔",
+  "gradeNotifyIntervalValue": "每 {hours} 小时检查",
+  "@gradeNotifyIntervalValue": {
+    "placeholders": {
+      "hours": {}
+    }
+  },
+  "gradeNotifyTitle": "成绩有更新",
+  "gradeNotifyBody": "发现 {count} 条新成绩",
+  "@gradeNotifyBody": {
+    "placeholders": {
+      "count": {}
+    }
+  },
+  "gradeNotifyChannelName": "成绩提醒",
+  "gradeNotifyChannelDescription": "当有新成绩发布时通知",
+  "notificationPermissionRequired": "需要开启通知权限才能接收成绩提醒。"
 }
