feat: 添加Firebase云函数实现云端成绩提醒功能
- 集成Firebase服务，在Android配置中添加google-services插件
- 实现云端成绩检查功能，支持定时检查成绩变化并推送通知
- 添加SCHEDULE_EXACT_ALARM权限以支持精确闹钟功能
- 在设置页面中添加云提醒开关选项
- 实现会话Cookie上传到Firebase云函数的机制
- 添加开发者测试页面，支持后台通知测试功能
- 新增相关国际化资源文件，支持中英文本地化
- 在登录流程中自动注册云推送会话
- 创建grade_check_scheduler.dart文件用于后台任务调度
- 实现CloudPushService类管理Firebase消息推送

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -197,5 +197,32 @@
   },
   "gradeNotifyChannelName": "Grade updates",
   "gradeNotifyChannelDescription": "Notify when new grades are posted",
-  "notificationPermissionRequired": "Enable notification permission to receive grade reminders."
+  "notificationPermissionRequired": "Enable notification permission to receive grade reminders.",
+  "cloudNotifyTitle": "Cloud grade reminders",
+  "cloudNotifySubtitle": "Receive grade notifications even when the app is closed.",
+  "cloudNotifyEnabledLabel": "Enable cloud grade reminders",
+  "cloudNotifyHint": "Requires uploading your current session cookies to Firebase.",
+  "cloudNotifyDialogTitle": "Enable cloud reminders?",
+  "cloudNotifyDialogBody": "To check grades in the cloud, your current session cookies will be uploaded to Firebase. They may expire, and you will need to log in again when that happens.",
+  "cloudNotifyDialogConfirm": "Enable",
+  "cloudNotifyRegisterSuccess": "Cloud reminders enabled.",
+  "cloudNotifyRegisterFailed": "Cloud reminders failed: {error}",
+  "@cloudNotifyRegisterFailed": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "cloudNotifyLoginRequired": "Please log in before enabling cloud reminders.",
+  "developerTitle": "Developer",
+  "developerSubtitle": "Advanced testing tools",
+  "testNotifyTitle": "Background notification test",
+  "testNotifySubtitle": "Check if notifications can fire when the app is closed.",
+  "testNotifyEnabledLabel": "Enable 1-minute test notifications",
+  "testNotifyHint": "This is best-effort. Android may delay background work.",
+  "exactAlarmPermissionRequired": "Enable exact alarms permission to run 1-minute tests.",
+  "testNotifyNowButton": "Send test notification now",
+  "testNotifySent": "Test notification sent.",
+  "testNotifyBody": "Background test notification delivered.",
+  "testNotifyChannelName": "Test notifications",
+  "testNotifyChannelDescription": "Background test notification channel"
 }
