feat(login): 添加致敬页面并在登录后显示
添加了新的致敬页面，包含对原作者的感谢说明，
在用户成功登录后会导航到此页面展示相关信息，
同时在设置页面添加入口方便用户查看。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -224,5 +224,13 @@
   "testNotifySent": "Test notification sent.",
   "testNotifyBody": "Background test notification delivered.",
   "testNotifyChannelName": "Test notifications",
-  "testNotifyChannelDescription": "Background test notification channel"
+  "testNotifyChannelDescription": "Background test notification channel",
+  "tributeTitle": "Tribute",
+  "tributeSubtitle": "A note of thanks to the original creator.",
+  "tributeHeadline": "Tribute & Note",
+  "tributeBody1": "Thanks to a senior who built a smoother academic tool and helped many students.",
+  "tributeBody2": "This app continues that inspiration and does not diminish the original contribution.",
+  "tributeBody3": "If that work helped you, please keep respect and kindness toward the original author.",
+  "tributeBody4": "May more students build to serve and share.",
+  "tributeContinue": "Continue to Home"
 }
