--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -232,5 +232,8 @@
   "tributeBody2": "This app continues that inspiration and does not diminish the original contribution.",
   "tributeBody3": "If that work helped you, please keep respect and kindness toward the original author.",
   "tributeBody4": "May more students build to serve and share.",
-  "tributeContinue": "Continue to Home"
+  "tributeContinue": "Continue to Home",
+  "tributePromptTitle": "Tribute reminder",
+  "tributePromptSubtitle": "Show the tribute once after a successful login.",
+  "tributePromptEnabledLabel": "Show tribute after login"
 }
