feat(home): 添加首页致敬卡片的显示控制功能
- 在HomePage中添加FutureBuilder来异步获取设置状态，
控制致敬卡片的显示与隐藏
- 导入SettingsStore以支持设置读取功能
- 添加SizedBox布局优化卡片间距

feat(settings): 增加首页致敬卡片显示开关设置项

- 在SettingsPage中新增_showHomeTributeCard状态变量
- 添加_getShowHomeTributeCard初始化逻辑
- 实现_toggleHomeTributeCard方法处理开关切换
- 在设置界面增加致敬卡片显示控制卡片组件
- 在设置界面致敬区域下方增加跳转到致敬页面的列表项

feat(settings-store): 新增首页致敬卡片显示设置存储支持

- 定义_showHomeTributeCard偏好键常量
- 实现getShowHomeTributeCard获取方法
- 实现setShowHomeTributeCard设置方法

feat(l10n): 添加致敬卡片相关国际化文本

- 更新en和zh语言文件中的致敬提示文本
- 添加首页致敬卡片标题、副标题和启用标签的新本地化字符串
- 调整部分致敬相关文本的表述方式

refactor(tribute-page): 重构致敬页面布局结构

- 将页面内容包装在Column组件中
- 分离致敬内容卡片和设置开关卡片为独立的Card组件
- 优化页面布局层次结构

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -233,7 +233,10 @@
   "tributeBody3": "If that work helped you, please keep respect and kindness toward the original author.",
   "tributeBody4": "May more students build to serve and share.",
   "tributeContinue": "Continue to Home",
-  "tributePromptTitle": "Tribute reminder",
-  "tributePromptSubtitle": "Show the tribute once after a successful login.",
-  "tributePromptEnabledLabel": "Show tribute after login"
+  "tributePromptTitle": "Login reminder",
+  "tributePromptSubtitle": "Show the tribute page once after a successful login.",
+  "tributePromptEnabledLabel": "Show tribute after login",
+  "tributeHomeCardTitle": "Home tribute entry",
+  "tributeHomeCardSubtitle": "Control whether the tribute entry is shown on Home.",
+  "tributeHomeCardEnabledLabel": "Show tribute on Home"
 }
