feat: 添加免责声明功能
添加了完整的免责声明系统，包括用户首次启动时的同意门控机制，
以及设置页面中的免责声明查看入口。该功能确保用户了解应用的
使用条款和隐私政策，在接受声明前无法进入主应用界面。

- 新增 DisclaimerGate 组件用于控制访问权限
- 创建 DisclaimerPage 展示声明内容并提供确认操作
- 集成本地存储管理用户接受状态
- 在设置页面添加免责声明查看入口
- 完成中英文本地化支持

--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -24,6 +24,17 @@
       "error": {}
     }
   },
+  "disclaimerTitle": "免责声明",
+  "disclaimerHeadline": "使用声明",
+  "disclaimerSubtitle": "请阅读并同意后继续使用。",
+  "disclaimerBody1": "本程序为教务系统的便捷客户端，所有请求直连教务系统官方域名，不通过第三方服务器或中转程序。",
+  "disclaimerBody2": "账号、密码与验证码仅用于向教务系统发起登录请求，本程序不收集、不上传、不转发这些信息。",
+  "disclaimerBody3": "会话信息仅保存在本地用于维持登录状态；如使用 Web 调试代理，其通信仅发生在本地或局域网且由你自行配置。",
+  "disclaimerBody4": "本项目已在 GitHub 开源，采用 GPLv3 许可证，开源地址：https://github.com/AuroBreeze/QFNU_API_App",
+  "disclaimerAccept": "同意并继续",
+  "disclaimerDecline": "不同意并退出",
+  "disclaimerEntryTitle": "免责声明",
+  "disclaimerEntrySubtitle": "查看使用声明与开源协议。",
   "failedToLoadTerms": "加载学期失败：{error}",
   "@failedToLoadTerms": {
     "placeholders": {
