--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,6 +24,17 @@
       "error": {}
     }
   },
+  "disclaimerTitle": "Disclaimer",
+  "disclaimerHeadline": "Usage Notice",
+  "disclaimerSubtitle": "Please read and accept to continue.",
+  "disclaimerBody1": "This app is a convenience client. All requests go directly to the official academic system domain, with no third-party server or relay.",
+  "disclaimerBody2": "Your username, password, and captcha are only used to log in to the academic system. The app does not collect, upload, or forward them.",
+  "disclaimerBody3": "Session data is stored locally to keep you signed in. If you use the web debug proxy, it only runs on your local machine or LAN and is configured by you.",
+  "disclaimerBody4": "This project is open-sourced on GitHub under the GPLv3 license: https://github.com/AuroBreeze/QFNU_API_App",
+  "disclaimerAccept": "Accept and continue",
+  "disclaimerDecline": "Decline and exit",
+  "disclaimerEntryTitle": "Disclaimer",
+  "disclaimerEntrySubtitle": "View the usage notice and open-source license.",
   "failedToLoadTerms": "Failed to load terms: {error}",
   "@failedToLoadTerms": {
     "placeholders": {
