feat: 添加学生主页和周次信息显示功能
- 新增jsp/xsMain_new.jsp页面，实现学生主页界面布局和功能
- 添加lib/home/week_info_card.dart组件，用于显示当前教学周信息
- 实现周次信息获取和解析功能，支持从服务端获取并缓存到本地
- 在today_schedule_card.dart中集成周次信息显示
- 添加中英文本地化支持，包括当前周、总周数等文本信息
- 实现代理服务器对周次信息接口的支持

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -86,6 +86,21 @@
     }
   },
   "logout": "Logout",
+  "currentWeekTitle": "Current teaching week",
+  "currentWeekUnknown": "Week info unavailable",
+  "currentWeekValue": "Week {week}",
+  "@currentWeekValue": {
+    "placeholders": {
+      "week": {}
+    }
+  },
+  "currentWeekValueWithTotal": "Week {week} / {total}",
+  "@currentWeekValueWithTotal": {
+    "placeholders": {
+      "week": {},
+      "total": {}
+    }
+  },
   "examScheduleCardTitle": "Exam Schedule",
   "examScheduleCardSubtitle": "Tap to view your upcoming exams",
   "academicWarningCardTitle": "Academic Warning",
