feat(settings): 添加成绩提醒功能的BETA标签和调整默认状态
- 在多语言文件中添加gradeNotifyBetaLabel本地化字符串
- 在设置页面的成绩提醒部分添加BETA标签显示
- 调整成绩提醒功能的默认启用状态为关闭

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -222,6 +222,7 @@
   "cacheClearedMessage": "Training plan cache cleared.",
   "gradeNotifySectionTitle": "Grade notifications",
   "gradeNotifySectionSubtitle": "Check in background and notify when new grades appear.",
+  "gradeNotifyBetaLabel": "BETA · In progress",
   "gradeNotifyEnabledLabel": "Enable grade notifications",
   "gradeNotifyIntervalLabel": "Check interval",
   "gradeNotifyIntervalValue": "Every {hours} hours",
